feat: change appsettings.json

--- a/Peer/appsettings.json
+++ b/Peer/appsettings.json
@@ -1,14 +1,14 @@
 {
   "PeerConfig": {
-    "MaxOneFileSize": 3145728,
-    "MinDebufSizeBytes": 28000000,
-    "MaxLengthText": 1048576,
-    "DebufSecond": 53,
-    "BigMessageSecond": 60,
-    "SmallMessageSecond": 960,
-    "First100SmallMessageSecond": 86400,
-    "SmallTextLength": 5000,
-    "SmallFileSizeBytes": 10240
+    "MaxSizeOneQuery": 3200000,
+    "MaxSizeText": 800000,
+    "Limit1": 28000000,
+    "Limit1BigMessageSecond": 60,
+    "Limit1SmallMessageSecond": 960,
+    "Limit1SmallSizeOneQuery": 120000,
+    "LimitOtherBigMessageSecond": 7,
+    "LimitOtherSmallMessageSecond": 65,
+    "LimitOtherSmallSizeOneQuery": 5100
   },
   "Logging": {
     "LogLevel": {
