feat: add custom db

--- a/Peer/appsettings.json
+++ b/Peer/appsettings.json
@@ -2,6 +2,7 @@
   "PeerConfig": {
     "MaxSizeOneQuery": 3200000,
     "MaxSizeText": 800000,
+    "AvgSizeBlock": 1050000,
     "Limit1": 28000000,
     "Limit1BigMessageSecond": 60,
     "Limit1SmallMessageSecond": 960,
