fix: load appsettings.json

--- a/Peer/appsettings.json
+++ b/Peer/appsettings.json
@@ -1,8 +1,7 @@
 {
-  "PeerConfig": {
+  "PeerMain": {
     "MaxSizeOneQuery": 3200000,
     "MaxSizeText": 800000,
-    "AvgSizeBlock": 1050000,
     "Limit1": 28000000,
     "Limit1BigMessageSecond": 60,
     "Limit1SmallMessageSecond": 960,
@@ -10,6 +9,12 @@
     "LimitOtherBigMessageSecond": 7,
     "LimitOtherSmallMessageSecond": 65,
     "LimitOtherSmallSizeOneQuery": 5100
+  },
+  "PeerAdditional": {
+    "FilePath": "wwwroot\\peer",
+    "TextPath": "data\\text",
+    "CommitBlockSecond": 60,
+    "AvgSizeBlock": 1050000
   },
   "Logging": {
     "LogLevel": {
