feat: add config value

--- a/Peer/appsettings.json
+++ b/Peer/appsettings.json
@@ -11,8 +11,9 @@
     "LimitOtherSmallSizeOneQuery": 5100
   },
   "PeerAdditional": {
-    "FilePath": "wwwroot\\peer",
     "TextPath": "data\\text",
+    "FilePath": "wwwroot\\peer",
+    "WebUrlFilePath": "peer",
     "CommitBlockSecond": 60,
     "AvgSizeBlock": 1050000
   },
