feat: do more faster code

--- a/peerphp/appsettings.json
+++ b/peerphp/appsettings.json
@@ -16,6 +16,12 @@
     "WebUrlFilePath": "peer",
     "CommitBlockSecond": 60,
     "AvgSizeBlock": 1050000,
-    "ConnectionString": "host=localhost;port=5432;username=postgres;password=postgres;database=peer;"
+    "ConnectionStringPostgres": "host=localhost;port=5432;username=postgres;password=postgres;database=peer;",
+    "MysqlHost": "127.0.0.1",
+    "MysqlPort": 3306,
+    "MysqlUser": "mysql",
+    "MysqlPassword": "mysql",
+    "MysqlDatabase": "peer",
+    "SecretUrlInitDatabase": "init1"
   }
 }
