fix: null error

--- a/peerphp/appsettings.json
+++ b/peerphp/appsettings.json
@@ -1,13 +1,13 @@
 {
   "PeerMain": {
-    "MaxSizeFileMB": 2.0,
-    "MaxSizeTextMB": 0.5,
-    "Limit1MB": 28.0,
-    "Limit1BigMessageSecond": 60,
-    "Limit1SmallMessageSecond": 960,
-    "Limit1SmallSizeOneQueryMB": 0.12,
-    "LimitOtherBigMessageSecond": 7,
-    "LimitOtherSmallMessageSecond": 65,
+    "MaxSizeFileMB": 1.005,
+    "MaxSizeTextMB": 0.25,
+    "Limit1MB": 64.0,
+    "Limit1BigMessageSecond": 864000,
+    "Limit1SmallMessageSecond": 17280000,
+    "Limit1SmallSizeOneQueryMB": 0.01,
+    "LimitOtherBigMessageSecond": 6,
+    "LimitOtherSmallMessageSecond": 1500,
     "LimitOtherSmallSizeOneQueryMB": 0.006
   },
   "PeerAdditional": {
